--- a/src/index.css
+++ b/src/index.css
@@ -2012,3 +2012,8 @@ html {
   inherits: false;
   initial-value: 0 0 #0000;
 }
+
+html, body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
